Refactor component views to implement new interfaces for better structure; add AlarmsView, LocationsView, ParticipantsView, and ResourcesView for improved data handling