@@ -1,9 +1,12 @@
 package org.ical4j.template.view;
 
-import net.fortuna.ical4j.model.component.VAvailability;
+import net.fortuna.ical4j.model.Parameter;
+import net.fortuna.ical4j.model.RelationshipPropertyAccessor;
+import net.fortuna.ical4j.model.parameter.LinkRel;
+import org.ical4j.template.util.EmojiProvider;
 
-import java.time.ZoneId;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /*
  * Copyright (c) 2025, Ben Fortuna
@@ -36,41 +39,14 @@ import java.util.List;
  * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-public class VAvailabilityView implements DescriptivePropertyView<VAvailability>,
-    DateTimePropertyView<VAvailability> {
+public interface RelationshipPropertyView<T extends RelationshipPropertyAccessor> {
 
-    private final VAvailability availability;
+    T getPropertyAccessor();
 
-    private final ZoneId zoneId;
-
-    public VAvailabilityView(VAvailability availability) {
-        this(availability, ZoneId.systemDefault());
-    }
-
-    public VAvailabilityView(VAvailability availability, ZoneId zoneId) {
-        this.availability = availability;
-        this.zoneId = zoneId;
-    }
-
-    @Override
-    public ZoneId getZoneId() {
-        return zoneId;
-    }
-
-    @Override
-    public VAvailability getPropertyAccessor() {
-        return availability;
-    }
-
-    public List<AvailableView> getAvailablePeriods() {
-        return availability.getAvailable().stream().map(AvailableView::new).toList();
-    }
-
-    @Override
-    public String toString() {
-        return "Summary: " + getSummary() + "\n" +
-               "Start: " + getStart() + "\n" +
-               "End: " + getEnd() + "\n" +
-               "Available Periods: " + getAvailablePeriods().stream().map(AvailableView::toString).toList();
+    default List<String> getLinks() {
+        return getPropertyAccessor().getLinks().stream().map(link -> {
+            LinkRel linkRelation = link.getRequiredParameter(Parameter.RELTYPE);
+            return EmojiProvider.getEmoji(linkRelation.getLinkRelationType().toString()) + " " + link.getValue();
+        }).collect(Collectors.toList());
     }
 }
